# StudyPlannerApp

./: .env.example  .replit  IMPROVED_WINDOWS_EXE_README.md  LICENSE  README.md  SUPABASE_SETUP.md  WINDOWS_EXE_README.md  codemagic.yaml  create_exe.py  create_model.py  fix_ai_model.py  fixed_chat_page.fixed  main.py  main.py.corrupted  main.py.fixed  main.py.new  main.py.original  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run_desktop.py  run_desktop_fix.py  serviceAccountKey.json  startup_fix.py  test_chat.html  test_login.py  test_supabase.py  updated_create_exe.py  windows_build.bat
.github/workflows/: build.yml  deploy.yml
app/: __init__.py  firebase_config.py
app/core/: __init__.py  auth.py  data_adapter.py  database.py  encryption.py  firebase_adapter.py  firebase_auth.py  supabase_client.py
app/models/: __init__.py  calendar.py  finance.py  health.py  user.py
app/services/: __init__.py  (+14 more)
attached_assets/: Pasted---1742125318479.txt  Pasted---1742145060042.txt  Pasted--Cross-Platform--1741972309153.txt  Pasted--Cross-Platform--1742110538774.txt  Pasted--Firebase-Firestore-Firebase--1742129293016.txt  Pasted--Firestore-NoSQL-database-Documents--1741977703537.txt  Pasted--GPT-4-API--1742126406230.txt  Pasted--HTML--1742281464886.txt  Pasted--addEventListener--1742282145935.txt  Pasted-Authenticate-with-Firebase-Using-Email-Link-in-JavaScript-bookmark-border-Stay-organized-with-c-1742146576526.txt  Pasted-Cannot-read-properties-of-null-reading-addEventListener-at-https-5d1c5ef1-6502-4722-af09-bae7-1742244167442.txt
(+20 files in other folders)
