[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "firebase-admin>=6.7.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "jdatetime>=5.2.0",
    "numpy>=2.2.3",
    "openai>=1.66.3",
    "pyqt6>=6.8.1",
    "pyqt6-webengine>=6.8.0",
    "requests>=2.32.3",
    "tflite-runtime>=2.14.0",
]
